# jkent

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.claude/skills/debug-scraper/: cli-reference.md
.github/workflows/: lint.yml  tests.yml
jkent/: __init__.py  data_types.py  preps.py
jkent/common/: checked_html.py  decorator_metadata.py  decorators.py  exceptions.py  lxml_page_element.py  page_element.py  param_models.py  parser.py  selector_observer.py
jkent/driver/: _speculation_support.py  archive_handler.py  via_actions.py
jkent/driver/browser_engine/: worker_page.py
jkent/driver/database_engine/: __init__.py  compression.py  database.py  errors.py  models.py  queue.py  staging.py  stats.py  storage.py
jkent/driver/replay/: error_pruning.py  source_index.py
jkent/driver/unified_driver/: __init__.py  bootstrap.py  circuit_breaker.py  compression.py  continuation.py  interstitials.py  lifecycle.py  orchestration.py  persistence.py  replay_run.py  replay_worker.py  requirements.py  run.py  speculation.py  worker.py
jkent/observability/: METRICS.md  __init__.py  instrumented_lock.py  loop_monitor.py  metrics.py  tracing.py
kent/: cli.py  data_types.py
kent/common/: page_element.py  parser.py  request_manager.py
kent/driver/: archive_handler.py  async_driver.py  sync_driver.py
kent/driver/local_only_driver/: __init__.py  error_pruning.py  errors.py  local_only_driver.py  source_index.py
kent/driver/persistent_driver/: _api.py  _queue.py  _staging.py  _storage.py  _workers.py  database.py  errors.py  models.py  rate_limiter.py  stats.py
kent/driver/playwright_driver/: playwright_driver.py
scripts/: release.py  run_unified.py  unreleased_changes.py
tests/: __init__.py  db_queries.py  mock_server.py  test_preps.py  test_smoke.py  utils.py
tests/contracts/: properties.py  test_properties.py
tests/data_types/: test_accumulated_data.py  test_archive_request.py  test_basescraper_introspection.py  test_field_resolvers.py  test_field_threading.py  test_nonnavigating_request.py  test_via_serialization.py
tests/database_engine/: test_compression_errors.py  test_database.py  test_errors.py  test_playwright_db_persistence.py  test_stats.py
tests/database_engine/sql_manager/: test_base.py  test_requests.py  test_responses.py
tests/decorators/: test_entry.py  test_single_page.py  test_step_preprocess.py
tests/driver/: test_streaming_archive_handler.py
tests/driver/unified/: conftest.py  test_add_seed_params.py  test_archive_fidelity.py  test_async_lifecycle_conformance.py  test_autowait_e2e.py  test_bootstrap.py  test_camoufox_transport.py  test_circuit_breaker.py  test_compactor.py  test_continuation.py  test_data_types_e2e.py  test_e2e.py  test_engine_selection.py  test_httpx_classification.py  test_httpx_default_headers.py  test_httpx_fidelity.py  test_httpx_follow_redirects.py  test_incidental_preresolve.py  test_json_body_e2e.py  test_monitor.py  test_monitor_conformance.py  test_persistence.py  (+23 more)
tests/form_conformance/: harness.py
tests/parsing/: test_lxml_page_element.py  test_page_element.py  test_parser.py  test_selector_observer.py
tests/unorganized/: test_follow_redirects.py  test_h11_patch.py
(+60 files in other folders)
