[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools",
]

[project]
name = "kent"
version = "0.1.0"
description = "Scraper-driver framework for structured web scraping"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx[socks,http2]>=0.28.1",
    # Pinned: kent monkey-patches h11._headers.normalize_and_validate
    # (gated on the H11_HEADER_FIXES driver requirement) and relies on
    # h11's internal API. Bumps must re-verify the patch.
    "h11==0.16.0",
    "lxml>=5.2",
    "pydantic>=2.12.5",
    "typing-extensions>=4.0.0",
    "cssselect",
    "sqlmodel>=0.0.32",
    "pyrate-limiter>=3.9.0",
    "click>=8.0.0",
    "jsondiff>=2.2.1",
    "jinja2>=3.1.6",
    "playwright>=1.57.0",
    "aiosqlite>=0.22.1",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "zstandard>=0.25.0",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.128.0",
]
demo = [
    "fastapi>=0.128.0",
    "uvicorn>=0.34.0",
]

[project.scripts]
kent = "kent.cli:main"
pdd = "kent.driver.persistent_driver.cli:main"
kent-demo = "kent.demo.run_demo:main"

[dependency-groups]
dev = [
    "kent[playwright,persistent-driver,web,demo]",
    "pytest",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=7.0.0",
    "mypy>=1.19.0",
    "types-lxml>=2025.11.25",
    "aiohttp>=3.13.3",
    "ruff>=0.15.0",
    "sphinx>=8.0,<9",
    "sphinx-immaterial>=0.13.9",
    "sphinxcontrib-mermaid>=2.0.0",
    "sphinx-autobuild>=2024.10.3",
    "pytest-xdist>=3.8.0",
    "freezegun>=1.5.5",
    "hypothesis>=6.151.9",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "generative: marks tests that use hypothesis property-based testing",
    "duplicate: marks tests that duplicate another test's assertion (for future cleanup)",
]
filterwarnings = [
    "ignore:'count' is passed as positional argument:DeprecationWarning",
    "ignore:websockets.legacy is deprecated:DeprecationWarning",
    "ignore:websockets.server.WebSocketServerProtocol is deprecated:DeprecationWarning",
]

[tool.setuptools]
[tool.setuptools.package-data]
"kent" = ["**/*.jinja2", "**/*.html", "**/queries/*.json"]

[tool.setuptools.packages.find]
exclude = ["tests*"]

[tool.ruff]
line-length = 79
lint.extend-safe-fixes = [
  # non-pep585-annotation
  "UP006",
]
lint.select = [
  # flake8-bugbear
  "B",
  # flake8-comprehensions
  "C4",
  # mccabe complexity
  "C90",
  # pycodestyle
  "E",
  # Pyflakes errors
  "F",
  # isort
  "I",
  # flake8-simplify
  "SIM",
  # flake8-tidy-imports
  "TID",
  # pyupgrade
  "UP",
  # Pyflakes warnings
  "W",
]
lint.mccabe.max-complexity = 39
lint.per-file-ignores."kent/driver/persistent_driver/cli/__init__.py" = [
  "E402",
  "F401",
]
lint.ignore = [
  # flake8-bugbear opinionated rules
  "B9",
  # line-too-long
  "E501",
  # suppressible-exception
  "SIM105",
  # if-else-block-instead-of-if-exp
  "SIM108",
  # printf-string-formatting
  "UP031",
]

[tool.mypy]
[[tool.mypy.overrides]]
module = []
ignore_missing_imports = true
